[tool.poetry]
name = "docs_app"
version = "0.0.0"
description = "docs"
authors = ["rmorshea <ryan.morshead@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
furo = "2022.04.07"
reactpy = { path = "..", extras = ["all"], develop = false }
sphinx = "*"
sphinx-autodoc-typehints = "*"
sphinx-copybutton = "*"
sphinx-autobuild = "*"
sphinx-reredirects = "*"
sphinx-design = "*"
sphinx-resolve-py-references = "*"
sphinxext-opengraph = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
